--- a/index.html
+++ b/index.html
@@ -327,77 +327,6 @@
       <section class="s4" id="a2">
         <div class="wrapper">
           <h2 class="title">Our customers and partners</h2>
-
-          <div class="container">
-            <div>
-              <img
-                style="width: 80px"
-                src="image/section4/en/001.png"
-                alt="pic"
-              />
-            </div>
-            <div>
-              <img src="image/section4/en/002.png" alt="pic" />
-            </div>
-            <div>
-              <img
-                style="width: 100px"
-                src="image/section4/en/003.png"
-                alt="pic"
-              />
-            </div>
-            <div>
-              <img
-                style="width: 180px"
-                src="image/section4/en/004.png"
-                alt="pic"
-              />
-            </div>
-            <div>
-              <img src="image/section4/en/005.png" alt="pic" />
-            </div>
-            <div>
-              <img src="image/section4/en/006.png" alt="pic" />
-            </div>
-            <div>
-              <img src="image/section4/en/007.png" alt="pic" />
-            </div>
-            <div>
-              <img src="image/section4/en/008.png" alt="pic" />
-            </div>
-            <div>
-              <img src="image/section4/en/009.png" alt="pic" />
-            </div>
-            <div>
-              <img src="image/section4/en/010.png" alt="pic" />
-            </div>
-            <div>
-              <img src="image/section4/en/011.png" alt="pic" />
-            </div>
-            <div>
-              <img src="image/section4/en/012.png" alt="pic" />
-            </div>
-            <div>
-              <img src="image/section4/en/013.png" alt="pic" />
-            </div>
-            <div>
-              <img
-                style="width: 193px"
-                src="image/section4/en/014.png"
-                alt="pic"
-              />
-            </div>
-            <div>
-              <img
-                style="width: 193px"
-                src="image/section4/en/015.png"
-                alt="pic"
-              />
-            </div>
-            <div>
-              <img src="image/section4/en/016.png" alt="pic" />
-            </div>
-          </div>
         </div>
       </section>
 
@@ -432,13 +361,13 @@
             <h2 class="title">Contact us</h2>
 
             <div class="items">
-              <div class="item">
+              <!-- <div class="item">
                 <p class="heading">Tel.</p>
 
                 <a href="tel:+7(499)123-45-67" class="text">
                   +7 (499) 123-45-67
                 </a>
-              </div>
+              </div> -->
               <div class="item">
                 <p class="heading">E-mail</p>
 
