--- a/index.html
+++ b/index.html
@@ -106,15 +106,29 @@
             thrive in the digital world through powerful social media marketing
             (SMM) strategies. Our team of experts creates engaging content,
             builds strong communities, and drives real results across all major
-            social platforms. <br /><br />What We Offer: <br />✅ Social Media
-            Management – Full-service content creation, scheduling, and
-            engagement. <br />✅ Targeted Advertising – High-ROI campaigns that
-            reach your ideal audience. <br />✅ Brand Strategy – Custom-tailored
-            solutions to enhance your online presence. <br />✅ Analytics &
-            Optimization – Data-driven insights to maximize performance.
-            <br /><br />With Daily Profit, your brand doesn’t just get
-            noticed—it grows, engages, and converts. Let’s take your business to
-            the next level! <br /><br />📩 Get in touch today!
+            social platforms. <br /><br /><span>What We Offer:</span>
+            <ul class="text__list">
+            <li class="text__list_item text"><span>Social Media
+                Management –</span> Full-service content creation, scheduling, and
+                engagement.</li>
+              <li class="text__list_item text">
+                <span>Targeted Advertising –</span> High-ROI campaigns that
+                reach your ideal audience.</li>
+              <li class="text__list_item text">
+                <span>Brand Strategy –</span> Custom-tailored
+                solutions to enhance your online presence.</li>
+              <li class="text__list_item text"><span>Analytics &
+                  Optimization –</span> Data-driven insights to maximize performance.</li>
+              <li class="text__list_item text">
+                <span>With Daily Profit, your brand doesn’t just get
+            noticed — </span>it grows, engages, and converts. Let’s take your business to
+            the next level!
+              </li>
+              <li class="text__list_item text">
+                <span class="affter__mail">Get in touch today!</span>
+              </li>
+            </ul>
+            
           </p>
         </div>
       </section>
@@ -327,6 +341,8 @@
       <section class="s4" id="a2">
         <div class="wrapper">
           <h2 class="title">Our customers and partners</h2>
+
+
         </div>
       </section>
 
@@ -384,25 +400,10 @@
 
             <div class="social">
               <a
-                href="https://www.facebook.com/DailyProfit.ru/"
+                href="https://www.instagram.com/dailyprofit.us?igsh=MWtpbmIxdm1xZTJ2ZA=="
                 target="_blank"
               >
-                <svg
-                  id="SvgjsSvg1000"
-                  version="1.1"
-                  width="10"
-                  height="19"
-                  viewBox="0 0 10 19"
-                >
-                  <defs id="SvgjsDefs1001"></defs>
-                  <path
-                    id="SvgjsPath1007"
-                    d="M491.009 1675.37C490.00300000000004 1675.1599999999999 489.228 1675.01 488.17 1675.01C485.125 1675.01 483.91200000000003 1676.44 483.91200000000003 1678.99L483.91200000000003 1680.85L482.00300000000004 1680.85L482.00300000000004 1683.86L483.91200000000003 1683.86L483.91200000000003 1693.01L487.62800000000004 1693.01L487.62800000000004 1683.86L490.338 1683.86L490.596 1680.85L487.628 1680.85L487.628 1679.3899999999999C487.628 1678.58 487.70599999999996 1678.07 488.893 1678.07C489.332 1678.07 490.02799999999996 1678.1399999999999 490.544 1678.25Z "
-                    fill="#068567"
-                    fill-opacity="1"
-                    transform="matrix(1,0,0,1,-482,-1675)"
-                  ></path>
-                </svg>
+<svg width="50px" height="50px" viewBox="-2.4 -2.4 28.80 28.80" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#068567"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#CCCCCC" stroke-width="0.096"></g><g id="SVGRepo_iconCarrier"> <path fill-rule="evenodd" clip-rule="evenodd" d="M12 18C15.3137 18 18 15.3137 18 12C18 8.68629 15.3137 6 12 6C8.68629 6 6 8.68629 6 12C6 15.3137 8.68629 18 12 18ZM12 16C14.2091 16 16 14.2091 16 12C16 9.79086 14.2091 8 12 8C9.79086 8 8 9.79086 8 12C8 14.2091 9.79086 16 12 16Z" fill="#068567"></path> <path d="M18 5C17.4477 5 17 5.44772 17 6C17 6.55228 17.4477 7 18 7C18.5523 7 19 6.55228 19 6C19 5.44772 18.5523 5 18 5Z" fill="#068567"></path> <path fill-rule="evenodd" clip-rule="evenodd" d="M1.65396 4.27606C1 5.55953 1 7.23969 1 10.6V13.4C1 16.7603 1 18.4405 1.65396 19.7239C2.2292 20.8529 3.14708 21.7708 4.27606 22.346C5.55953 23 7.23969 23 10.6 23H13.4C16.7603 23 18.4405 23 19.7239 22.346C20.8529 21.7708 21.7708 20.8529 22.346 19.7239C23 18.4405 23 16.7603 23 13.4V10.6C23 7.23969 23 5.55953 22.346 4.27606C21.7708 3.14708 20.8529 2.2292 19.7239 1.65396C18.4405 1 16.7603 1 13.4 1H10.6C7.23969 1 5.55953 1 4.27606 1.65396C3.14708 2.2292 2.2292 3.14708 1.65396 4.27606ZM13.4 3H10.6C8.88684 3 7.72225 3.00156 6.82208 3.0751C5.94524 3.14674 5.49684 3.27659 5.18404 3.43597C4.43139 3.81947 3.81947 4.43139 3.43597 5.18404C3.27659 5.49684 3.14674 5.94524 3.0751 6.82208C3.00156 7.72225 3 8.88684 3 10.6V13.4C3 15.1132 3.00156 16.2777 3.0751 17.1779C3.14674 18.0548 3.27659 18.5032 3.43597 18.816C3.81947 19.5686 4.43139 20.1805 5.18404 20.564C5.49684 20.7234 5.94524 20.8533 6.82208 20.9249C7.72225 20.9984 8.88684 21 10.6 21H13.4C15.1132 21 16.2777 20.9984 17.1779 20.9249C18.0548 20.8533 18.5032 20.7234 18.816 20.564C19.5686 20.1805 20.1805 19.5686 20.564 18.816C20.7234 18.5032 20.8533 18.0548 20.9249 17.1779C20.9984 16.2777 21 15.1132 21 13.4V10.6C21 8.88684 20.9984 7.72225 20.9249 6.82208C20.8533 5.94524 20.7234 5.49684 20.564 5.18404C20.1805 4.43139 19.5686 3.81947 18.816 3.43597C18.5032 3.27659 18.0548 3.14674 17.1779 3.0751C16.2777 3.00156 15.1132 3 13.4 3Z" fill="#068567"></path> </g></svg>
               </a>
             </div>
           </div>
