--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                 </a>
               </div>
               <div class="item">
-                <p class="heading">Adress</p>
+                <p class="heading">Address</p>
 
                 <p class="text">New York, NY (Brooklyn)</p>
               </div>
