--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Daily Profit - multi industry group of companies</title>
+    <title>Daily Profit – Elevate Your Brand with Expert SMM Solutions</title>
     <meta
       name="Description"
       content="Supplies and innovations. Marketing. Construction. Merger and acquisition. Legal services."
