--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
           </li>
           <li>
             <a href="#a2" v-on:click.prevent="scrollTo"
-              >OUR CUSTOMERS AND PARTNERS</a
-            >
+              >OUR CUSTOMERS AND PARTNERS</a>
           </li>
 
 
@@ -135,7 +134,7 @@
       </section>
 
       <!-- SECTION 3 -->
-      <section class="s3" id="a1">
+      <!-- <section class="s3" id="a1">
         <div class="wrapper">
           <h2 class="title">Scope of expertise</h2>
 
@@ -336,7 +335,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <!-- SECTION 4 -->
       <section class="s4" id="a2">
@@ -354,10 +353,7 @@
           <p class="subtitle">Daily Profit — efficiency day by day</p>
 
           <p class="text">
-            Well-balanced team of professionals with various experience in the
-            largest Russian and international companies. There is deep expert
-            analysis of all crucial market factors behind our success, and not
-            the guesses and assumptions.
+            A highly skilled and diverse team of professionals with experience in leading international companies. Our success is driven by in-depth expert analysis of key market factors, rather than speculation or assumptions.
           </p>
         </div>
       </section>
