--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
           <li>
             <a href="#a3" v-on:click.prevent="scrollTo">TEAM</a>
           </li>
-          <li>
+          <!-- <li>
             <a href="#a1" v-on:click.prevent="scrollTo">SCOPE OF EXPERTISE</a>
           </li>
           <li>
             <a href="#a2" v-on:click.prevent="scrollTo"
               >OUR CUSTOMERS AND PARTNERS</a>
-          </li>
+          </li> -->
 
 
           <li>
@@ -338,13 +338,13 @@
       </section> -->
 
       <!-- SECTION 4 -->
-      <section class="s4" id="a2">
+      <!-- <section class="s4" id="a2">
         <div class="wrapper">
           <h2 class="title">Our customers and partners</h2>
 
 
         </div>
-      </section>
+      </section> -->
 
       <!-- SECTION 5 -->
       <section class="s5" id="a3">
