--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Daily Profit – Elevate Your Brand with Expert SMM Solutions</title>
-    <meta
-      name="Description"
-      content="Supplies and innovations. Marketing. Construction. Merger and acquisition. Legal services."
-    />
+    <title>SMM Solutions for Business Growth – Daily Profit</title>
+    <meta name="Description" content="Supplies and innovations. Marketing. Construction. Merger and acquisition. Legal services." />
+    <meta name="Description" content="Boost your business with Daily Profit's expert SMM services. Our team specializes in social media management, targeted advertising, brand strategy, and more." />
+    <meta name="keywords" content="SMM, social media marketing, business growth, online marketing, brand strategy, digital marketing" />
+    <meta property="og:title" content="Daily Profit – Elevate Your Brand with Expert SMM Solutions" />
+    <meta property="og:description" content="Social media marketing services to elevate your brand and business." />
+    <meta property="og:image" content="path_to_image.jpg" />
+    <meta property="og:url" content="https://dailyprofit.us" />
+    
     <link type="image/x-icon" href="favicon.ico" rel="shortcut icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
