Работа с шрифтом. Работа с шапкой сайта

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
               <div class="item">
                 <p class="heading">E-mail</p>
 
-                <a href="mailto:Info@dailyprofit.ru" class="text">
+                <a href="mailto:Info@dailyprofit.us" class="text">
                   info@dailyprofit.us
                 </a>
               </div>
