--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
       </div>
 
       <!-- SECTION 1 -->
-      <section class="s1">
-        <div class="wrapper">
+      <section class="s1 animated-bg">
+        <div class="wrapper ">
           <div class="header">
             <!-- <img src="image/section1/logo-new.svg" alt="pic" class="logo" /> -->
               <h1 class="heading">Daily Profit</h1>
