Убрал карту с сайта. Добавил номер телефона.

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
       }
     </style>
 
-    <script
+    <!-- <script
       src="https://api-maps.yandex.ru/2.1/?apikey=c830657e-3077-4b6f-b2da-0780df110612
 &lang=en_US"
       type="text/javascript"
-    ></script>
+    ></script> -->
   </head>
   <body>
     <div class="wrapper-all" id="app" v-cloak>
@@ -378,13 +378,13 @@
             <h2 class="title">Contact us</h2>
 
             <div class="items">
-              <!-- <div class="item">
+              <div class="item">
                 <p class="heading">Tel.</p>
 
-                <a href="tel:+7(499)123-45-67" class="text">
-                  +7 (499) 123-45-67
+                <a href="tel:+7(646)785-7210" class="text">
+                  +1 (646) 785-7210
                 </a>
-              </div> -->
+              </div>
               <div class="item">
                 <p class="heading">E-mail</p>
 
@@ -395,7 +395,7 @@
               <div class="item">
                 <p class="heading">Address</p>
 
-                <p class="text">New York, NY (Brooklyn)</p>
+                <p class="text">New York, NY</p>
               </div>
             </div>
 
@@ -414,7 +414,7 @@
       </footer>
     </div>
 
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
       ymaps.ready(init);
       function init() {
         // Создание карты.
@@ -439,7 +439,7 @@
 
         myMap.geoObjects.add(myPlacemark);
       }
-    </script>
+    </script> -->
     <link rel="stylesheet" href="script/jquery/slick-1.5.0/slick/slick.css" />
     <link rel="stylesheet" href="style/style.css" />
     <script src="script/jquery/jquery.js"></script>
