--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
           </div>
         </div>
 
-        <div id="map"></div>
+        <!-- <div id="map"></div> -->
       </footer>
     </div>
 
